# VulkanC

./: CMakeLists.txt  README.md  TODO.txt  main.c  vk_utils.c  vk_utils.h
file/: file_utils.c  file_utils.h
game/: game_logic.c  game_logic.h
hexdb/: hexdb_loader.c  hexdb_loader.h
image/: image_parser.c  image_parser.h
math/: hash_map.c  hash_map.h  math_utils.c  math_utils.h  noise.c  noise.h
math/encode/: encode.c  encode.h
models/: grass.mtl  house.mtl  mountain.mtl
sample/OPYXMoHa0o2JthnEqxN2BA==/resources/db/: levelname.txt  worlddata.hdb
sample/OPYXMoHa0o2JthnEqxN2BA==/resources/regions/: r-0-0.vfc  r-0-128.vfc  r-0-160.vfc  r-0-32.vfc  r-0-64.vfc  r-0-96.vfc  r-128-0.vfc  r-128-128.vfc  r-128-160.vfc  r-128-32.vfc  r-128-64.vfc  r-128-96.vfc  r-160-0.vfc  r-160-128.vfc  r-160-160.vfc  r-160-32.vfc  r-160-64.vfc  r-160-96.vfc  r-32-0.vfc  r-32-128.vfc  (+17 more)
sample/world/resources/: .vfm  r-0-0.vfc  r-0-32.vfc  r-0-64.vfc  r-32-0.vfc  r-32-32.vfc  r-32-64.vfc  r-64-0.vfc  r-64-32.vfc  r-64-64.vfc
shaders/: compile.bat  default.frag  default.frag.spv  default.vert  default.vert.spv
utils/: utils.h
utils/buffer/: buffer_utils.h  buffers_utils.c
utils/constants_and_arrays/: constants_and_arrays.c  constants_and_arrays.h
utils/device_and_surface/: device_utils.c  device_utils.h
utils/generic/: generic_utils.c  generic_utils.h
utils/graphics/: graphics_utils.c  graphics_utils.h
utils/physics/: physics_utils.c  physics_utils.h
utils/swapchain/: swapchain_utils.c  swapchain_utils.h
utils/window/: window_utils.c  window_utils.h
vfc/: vfc_loader.c  vfc_loader.h
world/: save_world.c  save_world.h
zlib/: miniz.h
(+75 files in other folders)
